lang.output
State 64 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_GLOB_ITEM_LIST

    2 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM NT_GLOB_ITEM_LIST
    3                  | NT_GLOB_ITEM

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
    5             | TM_STRUCT TM_IDENT TM_SEMICOL
    6             | TM_UNION TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
    7             | TM_UNION TM_IDENT TM_SEMICOL
    8             | TM_ENUM TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY TM_SEMICOL
    9             | TM_ENUM TM_IDENT TM_SEMICOL
   10             | TM_TYPEDEF NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL
   11             | NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL

   12 NT_FIELD_LIST: NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL NT_FIELD_LIST
   13              | ε

   14 NT_ARGUMENT_TYPE_LIST: NT_LEFT_TYPE NT_ANNON_RIGHT_TYPE_EXPR TM_COMMA NT_ARGUMENT_TYPE_LIST
   15                      | NT_LEFT_TYPE NT_ANNON_RIGHT_TYPE_EXPR

   16 NT_ENUM_ELE_LIST: TM_IDENT TM_COMMA NT_ENUM_ELE_LIST
   17                 | TM_IDENT

   18 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   19             | TM_STRUCT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   20             | TM_STRUCT TM_IDENT
   21             | TM_UNION TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   22             | TM_UNION TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   23             | TM_UNION TM_IDENT
   24             | TM_ENUM TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   25             | TM_ENUM TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   26             | TM_ENUM TM_IDENT
   27             | TM_INT
   28             | TM_CHAR
   29             | TM_IDENT

   30 NT_NAME_RIGHT_TYPE_EXPR: TM_IDENT
   31                        | TM_LEFT_PAREN NT_NAME_RIGHT_TYPE_EXPR TM_RIGHT_PAREN
   32                        | TM_DEREF NT_NAME_RIGHT_TYPE_EXPR
   33                        | NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   34                        | NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN

   36 NT_ANNON_RIGHT_TYPE_EXPR: TM_DEREF NT_ANNON_RIGHT_TYPE_EXPR_2
   37                         | NT_ANNON_RIGHT_TYPE_EXPR_2

   38 NT_ANNON_RIGHT_TYPE_EXPR_2: TM_LEFT_PAREN TM_DEREF NT_ANNON_RIGHT_TYPE_EXPR_2 TM_RIGHT_PAREN
   39                           | NT_ANNON_RIGHT_TYPE_EXPR_2 TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   40                           | TM_LEFT_PAREN NT_ANNON_RIGHT_TYPE_EXPR_2 TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE TM_RIGHT_PAREN
   41                           | NT_ANNON_RIGHT_TYPE_EXPR_2 TM_LEFT_PAREN TM_RIGHT_PAREN
   42                           | TM_LEFT_PAREN NT_ANNON_RIGHT_TYPE_EXPR_2 TM_LEFT_PAREN TM_RIGHT_PAREN TM_RIGHT_PAREN
   43                           | NT_ANNON_RIGHT_TYPE_EXPR_2 TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   44                           | TM_LEFT_PAREN NT_ANNON_RIGHT_TYPE_EXPR_2 TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN TM_RIGHT_PAREN
   45                           | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 33 39 40
    TM_IDENT <id> (259) 4 5 6 7 8 9 16 17 18 20 21 23 24 26 29 30
    TM_INT <none> (260) 27
    TM_CHAR <none> (261) 28
    TM_LEFT_CURLY <none> (262) 4 6 8 18 19 21 22 24 25
    TM_RIGHT_CURLY <none> (263) 4 6 8 18 19 21 22 24 25
    TM_LEFT_SQUARE <none> (264) 33 39 40
    TM_RIGHT_SQUARE <none> (265) 33 39 40
    TM_LEFT_PAREN <none> (266) 31 34 35 38 40 41 42 43 44
    TM_RIGHT_PAREN <none> (267) 31 34 35 38 40 41 42 43 44
    TM_DEREF <none> (268) 32 36 38
    TM_SEMICOL <none> (269) 4 5 6 7 8 9 10 11 12
    TM_COMMA <none> (270) 14 16
    TM_STRUCT <none> (271) 4 5 18 19 20
    TM_UNION <none> (272) 6 7 21 22 23
    TM_ENUM <none> (273) 8 9 24 25 26
    TM_TYPEDEF <none> (274) 10


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    NT_WHOLE <gil> (21)
        on left: 1
        on right: 0
    NT_GLOB_ITEM_LIST <gil> (22)
        on left: 2 3
        on right: 1 2
    NT_GLOB_ITEM <gi> (23)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 3
    NT_FIELD_LIST <tl> (24)
        on left: 12 13
        on right: 4 6 12 18 19 21 22
    NT_ARGUMENT_TYPE_LIST <tl> (25)
        on left: 14 15
        on right: 14 34 43 44
    NT_ENUM_ELE_LIST <eel> (26)
        on left: 16 17
        on right: 8 16 24 25
    NT_LEFT_TYPE <lt> (27)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 10 11 12 14 15
    NT_NAME_RIGHT_TYPE_EXPR <vde> (28)
        on left: 30 31 32 33 34 35
        on right: 10 11 12 31 32 33 34 35
    NT_ANNON_RIGHT_TYPE_EXPR <vde> (29)
        on left: 36 37
        on right: 14 15
    NT_ANNON_RIGHT_TYPE_EXPR_2 <vde> (30)
        on left: 38 39 40 41 42 43 44 45
        on right: 36 37 38 39 40 41 42 43 44


State 0

    0 $accept: • NT_WHOLE $end

    TM_IDENT    shift, and go to state 1
    TM_INT      shift, and go to state 2
    TM_CHAR     shift, and go to state 3
    TM_STRUCT   shift, and go to state 4
    TM_UNION    shift, and go to state 5
    TM_ENUM     shift, and go to state 6
    TM_TYPEDEF  shift, and go to state 7

    NT_WHOLE           go to state 8
    NT_GLOB_ITEM_LIST  go to state 9
    NT_GLOB_ITEM       go to state 10
    NT_LEFT_TYPE       go to state 11


State 1

   29 NT_LEFT_TYPE: TM_IDENT •

    $default  reduce using rule 29 (NT_LEFT_TYPE)


State 2

   27 NT_LEFT_TYPE: TM_INT •

    $default  reduce using rule 27 (NT_LEFT_TYPE)


State 3

   28 NT_LEFT_TYPE: TM_CHAR •

    $default  reduce using rule 28 (NT_LEFT_TYPE)


State 4

    4 NT_GLOB_ITEM: TM_STRUCT • TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
    5             | TM_STRUCT • TM_IDENT TM_SEMICOL
   18 NT_LEFT_TYPE: TM_STRUCT • TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   19             | TM_STRUCT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   20             | TM_STRUCT • TM_IDENT

    TM_IDENT       shift, and go to state 12
    TM_LEFT_CURLY  shift, and go to state 13


State 5

    6 NT_GLOB_ITEM: TM_UNION • TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
    7             | TM_UNION • TM_IDENT TM_SEMICOL
   21 NT_LEFT_TYPE: TM_UNION • TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   22             | TM_UNION • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   23             | TM_UNION • TM_IDENT

    TM_IDENT       shift, and go to state 14
    TM_LEFT_CURLY  shift, and go to state 15


State 6

    8 NT_GLOB_ITEM: TM_ENUM • TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY TM_SEMICOL
    9             | TM_ENUM • TM_IDENT TM_SEMICOL
   24 NT_LEFT_TYPE: TM_ENUM • TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   25             | TM_ENUM • TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   26             | TM_ENUM • TM_IDENT

    TM_IDENT       shift, and go to state 16
    TM_LEFT_CURLY  shift, and go to state 17


State 7

   10 NT_GLOB_ITEM: TM_TYPEDEF • NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    NT_LEFT_TYPE  go to state 21


State 8

    0 $accept: NT_WHOLE • $end

    $end  shift, and go to state 22


State 9

    1 NT_WHOLE: NT_GLOB_ITEM_LIST •

    $default  reduce using rule 1 (NT_WHOLE)


State 10

    2 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM • NT_GLOB_ITEM_LIST
    3                  | NT_GLOB_ITEM •

    TM_IDENT    shift, and go to state 1
    TM_INT      shift, and go to state 2
    TM_CHAR     shift, and go to state 3
    TM_STRUCT   shift, and go to state 4
    TM_UNION    shift, and go to state 5
    TM_ENUM     shift, and go to state 6
    TM_TYPEDEF  shift, and go to state 7

    $default  reduce using rule 3 (NT_GLOB_ITEM_LIST)

    NT_GLOB_ITEM_LIST  go to state 23
    NT_GLOB_ITEM       go to state 10
    NT_LEFT_TYPE       go to state 11


State 11

   11 NT_GLOB_ITEM: NT_LEFT_TYPE • NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAME_RIGHT_TYPE_EXPR  go to state 27


State 12

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
    5             | TM_STRUCT TM_IDENT • TM_SEMICOL
   18 NT_LEFT_TYPE: TM_STRUCT TM_IDENT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   20             | TM_STRUCT TM_IDENT •

    TM_LEFT_CURLY  shift, and go to state 28
    TM_SEMICOL     shift, and go to state 29

    $default  reduce using rule 20 (NT_LEFT_TYPE)


State 13

   19 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 13 (NT_FIELD_LIST)

    NT_FIELD_LIST  go to state 30
    NT_LEFT_TYPE   go to state 31


State 14

    6 NT_GLOB_ITEM: TM_UNION TM_IDENT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
    7             | TM_UNION TM_IDENT • TM_SEMICOL
   21 NT_LEFT_TYPE: TM_UNION TM_IDENT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   23             | TM_UNION TM_IDENT •

    TM_LEFT_CURLY  shift, and go to state 32
    TM_SEMICOL     shift, and go to state 33

    $default  reduce using rule 23 (NT_LEFT_TYPE)


State 15

   22 NT_LEFT_TYPE: TM_UNION TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 13 (NT_FIELD_LIST)

    NT_FIELD_LIST  go to state 34
    NT_LEFT_TYPE   go to state 31


State 16

    8 NT_GLOB_ITEM: TM_ENUM TM_IDENT • TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY TM_SEMICOL
    9             | TM_ENUM TM_IDENT • TM_SEMICOL
   24 NT_LEFT_TYPE: TM_ENUM TM_IDENT • TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   26             | TM_ENUM TM_IDENT •

    TM_LEFT_CURLY  shift, and go to state 35
    TM_SEMICOL     shift, and go to state 36

    $default  reduce using rule 26 (NT_LEFT_TYPE)


State 17

   25 NT_LEFT_TYPE: TM_ENUM TM_LEFT_CURLY • NT_ENUM_ELE_LIST TM_RIGHT_CURLY

    TM_IDENT  shift, and go to state 37

    NT_ENUM_ELE_LIST  go to state 38


State 18

   18 NT_LEFT_TYPE: TM_STRUCT • TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   19             | TM_STRUCT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   20             | TM_STRUCT • TM_IDENT

    TM_IDENT       shift, and go to state 39
    TM_LEFT_CURLY  shift, and go to state 13


State 19

   21 NT_LEFT_TYPE: TM_UNION • TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   22             | TM_UNION • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   23             | TM_UNION • TM_IDENT

    TM_IDENT       shift, and go to state 40
    TM_LEFT_CURLY  shift, and go to state 15


State 20

   24 NT_LEFT_TYPE: TM_ENUM • TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   25             | TM_ENUM • TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   26             | TM_ENUM • TM_IDENT

    TM_IDENT       shift, and go to state 41
    TM_LEFT_CURLY  shift, and go to state 17


State 21

   10 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE • NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAME_RIGHT_TYPE_EXPR  go to state 42


State 22

    0 $accept: NT_WHOLE $end •

    $default  accept


State 23

    2 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM NT_GLOB_ITEM_LIST •

    $default  reduce using rule 2 (NT_GLOB_ITEM_LIST)


State 24

   30 NT_NAME_RIGHT_TYPE_EXPR: TM_IDENT •

    $default  reduce using rule 30 (NT_NAME_RIGHT_TYPE_EXPR)


State 25

   31 NT_NAME_RIGHT_TYPE_EXPR: TM_LEFT_PAREN • NT_NAME_RIGHT_TYPE_EXPR TM_RIGHT_PAREN

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAME_RIGHT_TYPE_EXPR  go to state 43


State 26

   32 NT_NAME_RIGHT_TYPE_EXPR: TM_DEREF • NT_NAME_RIGHT_TYPE_EXPR

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAME_RIGHT_TYPE_EXPR  go to state 44


State 27

   11 NT_GLOB_ITEM: NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR • TM_SEMICOL
   33 NT_NAME_RIGHT_TYPE_EXPR: NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   34                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_SQUARE  shift, and go to state 45
    TM_LEFT_PAREN   shift, and go to state 46
    TM_SEMICOL      shift, and go to state 47


State 28

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
   18 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 13 (NT_FIELD_LIST)

    NT_FIELD_LIST  go to state 48
    NT_LEFT_TYPE   go to state 31


State 29

    5 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_SEMICOL •

    $default  reduce using rule 5 (NT_GLOB_ITEM)


State 30

   19 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_CURLY NT_FIELD_LIST • TM_RIGHT_CURLY

    TM_RIGHT_CURLY  shift, and go to state 49


State 31

   12 NT_FIELD_LIST: NT_LEFT_TYPE • NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL NT_FIELD_LIST

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAME_RIGHT_TYPE_EXPR  go to state 50


State 32

    6 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY TM_SEMICOL
   21 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 13 (NT_FIELD_LIST)

    NT_FIELD_LIST  go to state 51
    NT_LEFT_TYPE   go to state 31


State 33

    7 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_SEMICOL •

    $default  reduce using rule 7 (NT_GLOB_ITEM)


State 34

   22 NT_LEFT_TYPE: TM_UNION TM_LEFT_CURLY NT_FIELD_LIST • TM_RIGHT_CURLY

    TM_RIGHT_CURLY  shift, and go to state 52


State 35

    8 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_LEFT_CURLY • NT_ENUM_ELE_LIST TM_RIGHT_CURLY TM_SEMICOL
   24 NT_LEFT_TYPE: TM_ENUM TM_IDENT TM_LEFT_CURLY • NT_ENUM_ELE_LIST TM_RIGHT_CURLY

    TM_IDENT  shift, and go to state 37

    NT_ENUM_ELE_LIST  go to state 53


State 36

    9 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_SEMICOL •

    $default  reduce using rule 9 (NT_GLOB_ITEM)


State 37

   16 NT_ENUM_ELE_LIST: TM_IDENT • TM_COMMA NT_ENUM_ELE_LIST
   17                 | TM_IDENT •

    TM_COMMA  shift, and go to state 54

    $default  reduce using rule 17 (NT_ENUM_ELE_LIST)


State 38

   25 NT_LEFT_TYPE: TM_ENUM TM_LEFT_CURLY NT_ENUM_ELE_LIST • TM_RIGHT_CURLY

    TM_RIGHT_CURLY  shift, and go to state 55


State 39

   18 NT_LEFT_TYPE: TM_STRUCT TM_IDENT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   20             | TM_STRUCT TM_IDENT •

    TM_LEFT_CURLY  shift, and go to state 56

    $default  reduce using rule 20 (NT_LEFT_TYPE)


State 40

   21 NT_LEFT_TYPE: TM_UNION TM_IDENT • TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY
   23             | TM_UNION TM_IDENT •

    TM_LEFT_CURLY  shift, and go to state 57

    $default  reduce using rule 23 (NT_LEFT_TYPE)


State 41

   24 NT_LEFT_TYPE: TM_ENUM TM_IDENT • TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY
   26             | TM_ENUM TM_IDENT •

    TM_LEFT_CURLY  shift, and go to state 58

    $default  reduce using rule 26 (NT_LEFT_TYPE)


State 42

   10 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR • TM_SEMICOL
   33 NT_NAME_RIGHT_TYPE_EXPR: NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   34                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_SQUARE  shift, and go to state 45
    TM_LEFT_PAREN   shift, and go to state 46
    TM_SEMICOL      shift, and go to state 59


State 43

   31 NT_NAME_RIGHT_TYPE_EXPR: TM_LEFT_PAREN NT_NAME_RIGHT_TYPE_EXPR • TM_RIGHT_PAREN
   33                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   34                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_SQUARE  shift, and go to state 45
    TM_LEFT_PAREN   shift, and go to state 46
    TM_RIGHT_PAREN  shift, and go to state 60


State 44

   32 NT_NAME_RIGHT_TYPE_EXPR: TM_DEREF NT_NAME_RIGHT_TYPE_EXPR •
   33                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   34                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_SQUARE  shift, and go to state 45
    TM_LEFT_PAREN   shift, and go to state 46

    $default  reduce using rule 32 (NT_NAME_RIGHT_TYPE_EXPR)


State 45

   33 NT_NAME_RIGHT_TYPE_EXPR: NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_SQUARE • TM_NAT TM_RIGHT_SQUARE

    TM_NAT  shift, and go to state 61


State 46

   34 NT_NAME_RIGHT_TYPE_EXPR: NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_PAREN • NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_PAREN • TM_RIGHT_PAREN

    TM_IDENT        shift, and go to state 1
    TM_INT          shift, and go to state 2
    TM_CHAR         shift, and go to state 3
    TM_RIGHT_PAREN  shift, and go to state 62
    TM_STRUCT       shift, and go to state 18
    TM_UNION        shift, and go to state 19
    TM_ENUM         shift, and go to state 20

    NT_ARGUMENT_TYPE_LIST  go to state 63
    NT_LEFT_TYPE           go to state 64


State 47

   11 NT_GLOB_ITEM: NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL •

    $default  reduce using rule 11 (NT_GLOB_ITEM)


State 48

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST • TM_RIGHT_CURLY TM_SEMICOL
   18 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST • TM_RIGHT_CURLY

    TM_RIGHT_CURLY  shift, and go to state 65


State 49

   19 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY •

    $default  reduce using rule 19 (NT_LEFT_TYPE)


State 50

   12 NT_FIELD_LIST: NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR • TM_SEMICOL NT_FIELD_LIST
   33 NT_NAME_RIGHT_TYPE_EXPR: NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   34                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   35                        | NT_NAME_RIGHT_TYPE_EXPR • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_SQUARE  shift, and go to state 45
    TM_LEFT_PAREN   shift, and go to state 46
    TM_SEMICOL      shift, and go to state 66


State 51

    6 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST • TM_RIGHT_CURLY TM_SEMICOL
   21 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_CURLY NT_FIELD_LIST • TM_RIGHT_CURLY

    TM_RIGHT_CURLY  shift, and go to state 67


State 52

   22 NT_LEFT_TYPE: TM_UNION TM_LEFT_CURLY NT_FIELD_LIST TM_RIGHT_CURLY •

    $default  reduce using rule 22 (NT_LEFT_TYPE)


State 53

    8 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST • TM_RIGHT_CURLY TM_SEMICOL
   24 NT_LEFT_TYPE: TM_ENUM TM_IDENT TM_LEFT_CURLY NT_ENUM_ELE_LIST • TM_RIGHT_CURLY

    TM_RIGHT_CURLY  shift, and go to state 68


State 54

   16 NT_ENUM_ELE_LIST: TM_IDENT TM_COMMA • NT_ENUM_ELE_LIST

    TM_IDENT  shift, and go to state 37

    NT_ENUM_ELE_LIST  go to state 69


State 55

   25 NT_LEFT_TYPE: TM_ENUM TM_LEFT_CURLY NT_ENUM_ELE_LIST TM_RIGHT_CURLY •

    $default  reduce using rule 25 (NT_LEFT_TYPE)


State 56

   18 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 13 (NT_FIELD_LIST)

    NT_FIELD_LIST  go to state 70
    NT_LEFT_TYPE   go to state 31


State 57

   21 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_CURLY • NT_FIELD_LIST TM_RIGHT_CURLY

    TM_IDENT   shift, and go to state 1
    TM_INT     shift, and go to state 2
    TM_CHAR    shift, and go to state 3
    TM_STRUCT  shift, and go to state 18
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 13 (NT_FIELD_LIST)

    NT_FIELD_LIST  go to state 71
    NT_LEFT_TYPE   go to state 31


State 58

   24 NT_LEFT_TYPE: TM_ENUM TM_IDENT TM_LEFT_CURLY • NT_ENUM_ELE_LIST TM_RIGHT_CURLY

    TM_IDENT  shift, and go to state 37

    NT_ENUM_ELE_LIST  go to state 72


State 59

   10 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE NT_NAME_RIGHT_TYPE_EXPR TM_SEMICOL •

    $default  reduce using rule 10 (NT_GLOB_ITEM)


State 60

   31 NT_NAME_RIGHT_TYPE_EXPR: TM_LEFT_PAREN NT_NAME_RIGHT_TYPE_EXPR TM_RIGHT_PAREN •

    $default  reduce using rule 31 (NT_NAME_RIGHT_TYPE_EXPR)


State 61

   33 NT_NAME_RIGHT_TYPE_EXPR: NT_NAME_RIGHT_TYPE_EXPR TM_LEFT_SQUARE TM_NAT • TM_RIGHT_SQUARE

    TM_RIGHT_SQUARE  shift, and go to state 73

